Fix: Wrap long lines in org-mode code blocks

--- a/_orgcss/site.css
+++ b/_orgcss/site.css
@@ -23,3 +23,7 @@ pre.src.src-scala {
     font-size: 16px;
     font-family: 'JetBrains Mono', monospace;
 }
+
+pre.src {
+    white-space: pre-wrap;
+}
